<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragmentDest">

    <fragment
        android:id="@+id/mainFragmentDest"
        android:name="com.mskwak.toy_todo.ui.home.HomeFragment"
        android:label="@string/app_name">

        <action
            android:id="@+id/action_mainFragment_to_editFragment"
            app:destination="@id/editFragmentDest" />
        <action
            android:id="@+id/action_mainFragment_to_detailFragment"
            app:destination="@id/detailFragmentDest" />

    </fragment>

    <fragment
        android:id="@+id/editFragmentDest"
        android:name="com.mskwak.toy_todo.ui.edit.EditFragment">

        <argument
            android:name="taskId"
            app:argType="string"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/detailFragmentDest"
        android:name="com.mskwak.toy_todo.ui.detail.DetailFragment"
        android:label="@string/task_detail">

        <action
            android:id="@+id/action_detailFragment_to_editFragment"
            app:destination="@id/editFragmentDest" />

        <argument
            android:name="taskId"
            app:argType="string"
            app:nullable="false" />

    </fragment>

    <fragment
        android:id="@+id/CompletedFragmentDest"
        android:name="com.mskwak.toy_todo.ui.completed.CompletedFragment"
        android:label="@string/label_complete" />

</navigation>