<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mskwak.toy_todo.ui.detail.DetailViewModel" />

        <variable
            name="fragment"
            type="com.mskwak.toy_todo.ui.dialog.DeleteTaskConfirmDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_delete_confirm"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/deleteButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> viewModel.deleteTask()}"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/secondaryColor"
            android:onClick="@{() -> fragment.onCancel()}"
            android:text="@string/cancel"
            app:layout_constraintRight_toLeftOf="@id/deleteButton"
            app:layout_constraintTop_toTopOf="@id/deleteButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>